--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TooNote</title>
+    <link rel="shortcut icon" href="/logo@192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/logo@192.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/logo@64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo@32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo@16.png">
+    <link rel="apple-touch-icon" href="/logo@180.png">
 </head>
 <body>
     <script>
